Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Changes to be committed:
	modified:   .env.example
	modified:   Makefile
	modified:   requirements.txt
	new file:   src/panda_brain/agents/bilibili/__init__.py
	new file:   src/panda_brain/agents/bilibili/agent.py
	new file:   src/panda_brain/agents/bilibili/test_agent.py
	new file:   src/panda_brain/agents/bilibili/tools/__init__.py
	new file:   src/panda_brain/agents/bilibili/tools/bangumi.py
	new file:   src/panda_brain/agents/bilibili/tools/comment.py
	new file:   src/panda_brain/agents/bilibili/tools/search.py
	modified:   src/panda_brain/orchestrator/tools.py

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ PANDA_OLLAMA_BASE_URL=http://localhost:11434/v1
 
 # 默认使用的模型名 (需要先 ollama pull 对应模型)
 PANDA_DEFAULT_MODEL=qwen3:latest
+
+# B站 SESSDATA（可选，用于需要登录的接口）
+# BILIBILI_SESSDATA=your_sessdata_here
